# mistral-project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/econome/: db.py  run_server.py  settings.py
src/econome/routers/: __init__.py  recipes.py
